# CMake-Examples

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
cmake/: FindLibd.cmake
libs/: CMakeLists.txt
libs/libA/: CMakeLists.txt
libs/libA/src/: task.cpp  task.h
libs/libB/: CMakeLists.txt
libs/libB/src/: task.cpp  task.h
libs/libC/: CMakeLists.txt
libs/libC/src/: task.cpp  task.h
libs/libD/: CMakeLists.txt
libs/libD/src/: libd.h  task.cpp
